stylesheets/partials/_module.scss
/* Module styles */

// Header module
header {
	background-color: $headerColor;
	padding-bottom: 0;
	margin-bottom: 50px;
	overflow: auto; // FF fix for bizarre margin calculation
	width: 100%;

	h1 {
		margin: 0.75em 0 0.5em 0;
	}

	@include breakpoint(mobile-portrait) {
		h1 {
			padding-top: 10px;
			max-width: 100px;
		}
	}
}
.header__logo {
	background: url(../../images/logo.png) left center no-repeat;
	background-size: 100%;
	display: inline-block;
	max-width: 135px;
	min-height: 41px;
	overflow: hidden;
	position: relative;
	text-indent: 120%;
	white-space: nowrap;
	width: 100%;
	z-index: 2;
	@include breakpoint(mobile-tablet) {
		min-height: 25px;
		width: 100%;
	}
}


// Article Detail module
.article-detail__body {
	h2:first-child {
		margin-top: 0;
	}
	h2 + h3 {
		font-size: em(24px);
		margin-top: -20px; // Reduce gap without affecting h2 margin in case there is no subheading
		margin-bottom: 0.75em;
		@include breakpoint(mobile-portrait) {
	      font-size: em(21px);
	      margin-top: -15px;
	    }
	}
	img {
		margin: 0 0 1em 0;
		&.-left {
			margin-right: 30px;
		}
		&.-left {
			margin-left: 30px;
		}
	}
}
.article-detail__sidebar {
	h3 {
		font-size: em(24px);
		&:first-child {
			margin-top: 0;
		}
	}
}
.share {
	margin: 10px 0 0 0;
	padding: 0;
	li {
		display: inline-block;
		padding-left: 15px;
		a {
			background: url(../../images/shareicons.png) no-repeat;
			display: block;
			height: 28px;
			overflow: hidden;
			text-indent: 100%;
			white-space: nowrap;
			width: 28px;
		}
		&:first-child {
			padding-left: 0;
		}
	}
	.twitter a {
		background-position: -57px 0;
	}
	.linkedin a {
		background-position: -114px 0;
	}
}


// Forms
.whitepaper-form {
	border: 1px solid #ddd;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 20px;
	.row {
		margin-bottom: 0;
	}
}
label {
	clear: both;
	display: block;
	padding-bottom: 10px;
	&:after {
		visibility: hidden;
		display: block;
		content: "";
		clear: both;
		height: 0;
	}
	b {
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		color: #707070;
		display: inline-block;
		float: left;
		font-family: "Frutiger Regular", Arial, sans-serif;
		font-size: em(12px);
		font-weight: bold;
		padding: {
			top: 7px;
			right: 10px;
		}
		text-align: right;
		width: 40%;

	}
	input {
		border: 1px solid #ddd;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		float: left;
		font-size: em(12px);
		padding: 5px;
		width: 60%;
		-webkit-appearance: none;
		-moz-appearance: none;
	}
	select {
		margin-top: 5px;
	}
	@include breakpoint(mobile-tablet) {
		b {
			padding-bottom: 3px;
			text-align: left;
			width: 100%;
		}
		input {
			width: 100%;
		}
	}
	@include breakpoint(tablet) {
		b {
			font-size: em(12px);
		}
	}
}


//Buttons  
a.button {
	border: none;
	background: $lightBlue;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-o-border-radius: 3px;
	border-radius: 3px;
	color: #fff;
	font-family: 'Frutiger Regular', sans-serif;
	padding: 7px 15px;
	&:hover {
		background-color: lighten($lightBlue, 3);
	}
}
button {
	@extend a.button;
	font-size: em(16px);
	float: right;
}


//Footer modules
footer {
	clear: both;
	background-color: #EDF2F8;
	border-top: 1px solid #959595;
	margin-top: 45px;
	overflow: auto;
	padding: 35px 0 55px 0;
	width: 100%;
	p {
		color: #586977;
		font-size: em(12px);
	}
	@include breakpoint(tablet) {
		.grid-container div:last-child{
		margin-top: -40px;
	}
	}
	@include breakpoint(mobile-portrait) {
		text-align: center;
	} 
}
.footer__contact {
	padding-left: 0;
	li {
		border-left: 1px solid #586977;
		display: inline-block;
		line-height: 17px;
		padding: 0 10px;
		a {
			font-size: em(18px);
			text-decoration: none;
		}
		a[href^="tel:"] {
			color: #586977;
		}
	}
	li:first-child{
		border-left: none;
		padding-left: 0;
	}
	li:last-child{
		padding-right: 0;
	}
	@include breakpoint(mobile-portrait) {
		li {
			a {
				font-size: em(12px);
				line-height: 12px;
			}
		}
	}
}
.footer__fineprint {
	@extend .footer__contact;
	li {
		line-height: 12px;
		a {
			font-size: em(12px);
		}
	}
}
.footer__social {
	float: right;
	padding: 0;
	margin-bottom: 0;
	li {
		display: inline-block;
		padding-left: 15px;
		a {
			background: url(../../images/socialicons.png) no-repeat;
			display: block;
			height: 28px;
			overflow: hidden;
			text-indent: 100%;
			white-space: nowrap;
			width: 28px;
		}

	}
	.twitter a:hover {
		background-position: 0 -28px;
	}
	.facebook a {
		background-position: -43px 0;
	}
	.facebook a:hover {
		background-position: -43px -28px;
	}
	.linkedin a {
		background-position: -87px 0px;
	}
	.linkedin a:hover {
		background-position: -87px -28px;
	}
	.youtube a {
		background-position: -131px 0px;
	}
	.youtube a:hover {
		background-position: -131px -28px;
	}
	.slideshare a {
		background-position: -173px 0px;
	}
	.slideshare a:hover {
		background-position: -173px -28px;
	}
	.google a {
		background-position: -217px 0px;
	}
	.google a:hover {
		background-position: -217px -28px;
	}
	@include breakpoint(tablet) {
		padding-left: 50px;
		.twitter, .facebook, .linkedin {
			padding-bottom: 15px;
		}
	}
	@include breakpoint(mobile-portrait) {
		float: none;
		margin: {
			right: auto;
			left: auto;
		}
		width: 276px;
		li:first-child{
			padding-left: 0;
		}
	} 
}

